--- a/MAT381E_Syllabus.Rmd
+++ b/MAT381E_Syllabus.Rmd
@@ -196,7 +196,7 @@ the team fails to do oral presentation, that individual will receive “0” for
 **Class Attendance Policy:** 
 
 The students are encouraged to attend classes, 
-whereas the attendance is not mandatory in Spring 2021 semester due to Covid-19 pandemic. 
+whereas the attendance is not mandatory in Fall 2021 semester due to Covid-19 pandemic. 
 For that reason, the student is deemed responsible to manage his/her absences.
 
 **Participation Policy:** 
