--- a/MAT381E_Syllabus.tex
+++ b/MAT381E_Syllabus.tex
@@ -83,7 +83,7 @@
 \maketitle
 
 \hypertarget{instructor-information}{%
-\section{Instructor Information}\label{instructor-information}}
+\subsection{Instructor Information}\label{instructor-information}}
 
 \textbf{Instructor:} Gül İnan
 
@@ -95,18 +95,8 @@
 \textbf{Office hour:} Send me an e-mail for your queries or for
 scheduling an online appointment via Zoom.
 
-\hypertarget{seminar-series}{%
-\section{Seminar Series}\label{seminar-series}}
-
-Assist. Prof.~Dr.~Mert Moral, Sabancı University, May 3, 2021 at 14:30pm
-
-Dr.~Çağrı Özçağlar, LinkedIN, Silicon Valley, CA, May 24 2021, at
-17:40pm
-
-Prof.~Dr.~Emre Erdoğan, Bilgi University, May 31 2021, at 16:30pm
-
 \hypertarget{course-information}{%
-\section{Course Information}\label{course-information}}
+\subsection{Course Information}\label{course-information}}
 
 \textbf{Course Type:} Elective for undergraduate students.
 
@@ -126,12 +116,13 @@ importing, cleaning, reshaping, exploring, and visualizing these data.
 
 \textbf{Computer skills:}
 
-We will be using R programming language with RStudio IDE for data
-related works. You will be using the version control system Git along
-with GitHub to submit homework assignments and team-based works. Lastly,
-prior knowledge of CSS, Html, JavaScript brings a big plus to produce
-fancy outputs for your works. But it is neither a must nor focus of this
-course.
+We will be using \texttt{R} programming language with
+\texttt{RStudio\ IDE} for data related works. You will be using the
+version control system \texttt{Git} along with \texttt{GitHub} to submit
+homework assignments and team-based works. Lastly, prior knowledge of
+\texttt{HTML}, \texttt{CSS}, and \texttt{JavaScript} brings a big plus
+to produce fancy outputs for your works. But it is neither a must nor
+focus of this course.
 
 \textbf{Course website:} For each study, you will also receive an
 invitation soon to submit your study to the GitHub Classroom of the
@@ -148,9 +139,8 @@ Istanbul).
 invitation will be sent you via your ITU email to join the class on
 Mondays. Lectures will be automatically recorded and you will have a
 chance re-watch the videos after the class on
-\href{Ninova}{https://ninova.itu.edu.tr}. Lecture materials (notes,
-assignments, grades etc) will be uploaded on
-\href{Ninova}{https://ninova.itu.edu.tr}.
+\url{https://ninova.itu.edu.tr}. Lecture materials (notes, assignments,
+grades etc) will be uploaded on \url{https://ninova.itu.edu.tr}.
 
 \textbf{Course Objectives:} This course aims to:
 
@@ -167,7 +157,7 @@ assignments, grades etc) will be uploaded on
   from digital technologies or available on the web.
 \item
   To give an ability for accessing, cleaning, reshaping, exploring, and
-  visualizing diffrent types of data from different disciplines.
+  visualizing different types of data from different disciplines.
 \item
   To give an ability for interpreting data arising from different
   disciplines and making data-driven inferences.
@@ -177,164 +167,163 @@ assignments, grades etc) will be uploaded on
 schedule given below. However, weekly class schedules are subject to
 change depending on the progress we make as a class.
 
-\begin{longtable}[]{@{}lll@{}}
+\begin{longtable}[]{@{}ccl@{}}
 \toprule
-\begin{minipage}[b]{(\columnwidth - 2\tabcolsep) * \real{0.17}}\raggedright
+\begin{minipage}[b]{(\columnwidth - 2\tabcolsep) * \real{0.23}}\centering
 \textbf{Week}\strut
 \end{minipage} &
-\begin{minipage}[b]{(\columnwidth - 2\tabcolsep) * \real{0.17}}\raggedright
+\begin{minipage}[b]{(\columnwidth - 2\tabcolsep) * \real{0.23}}\centering
 \textbf{Date}\strut
 \end{minipage} &
-\begin{minipage}[b]{(\columnwidth - 2\tabcolsep) * \real{0.67}}\raggedright
+\begin{minipage}[b]{(\columnwidth - 2\tabcolsep) * \real{0.55}}\raggedright
 \textbf{Topic}\strut
 \end{minipage}\tabularnewline
 \midrule
 \endhead
-\begin{minipage}[t]{(\columnwidth - 2\tabcolsep) * \real{0.17}}\raggedright
+\begin{minipage}[t]{(\columnwidth - 2\tabcolsep) * \real{0.23}}\centering
 1\strut
 \end{minipage} &
-\begin{minipage}[t]{(\columnwidth - 2\tabcolsep) * \real{0.17}}\raggedright
-01/03\strut
+\begin{minipage}[t]{(\columnwidth - 2\tabcolsep) * \real{0.23}}\centering
+04/10\strut
 \end{minipage} &
-\begin{minipage}[t]{(\columnwidth - 2\tabcolsep) * \real{0.67}}\raggedright
+\begin{minipage}[t]{(\columnwidth - 2\tabcolsep) * \real{0.55}}\raggedright
 Introduction to data science and computational tools.\strut
 \end{minipage}\tabularnewline
-\begin{minipage}[t]{(\columnwidth - 2\tabcolsep) * \real{0.17}}\raggedright
+\begin{minipage}[t]{(\columnwidth - 2\tabcolsep) * \real{0.23}}\centering
 2\strut
 \end{minipage} &
-\begin{minipage}[t]{(\columnwidth - 2\tabcolsep) * \real{0.17}}\raggedright
-08/03\strut
+\begin{minipage}[t]{(\columnwidth - 2\tabcolsep) * \real{0.23}}\centering
+11/10\strut
 \end{minipage} &
-\begin{minipage}[t]{(\columnwidth - 2\tabcolsep) * \real{0.67}}\raggedright
+\begin{minipage}[t]{(\columnwidth - 2\tabcolsep) * \real{0.55}}\raggedright
 Tools for data importing, manipulating, and tidying.\strut
 \end{minipage}\tabularnewline
-\begin{minipage}[t]{(\columnwidth - 2\tabcolsep) * \real{0.17}}\raggedright
+\begin{minipage}[t]{(\columnwidth - 2\tabcolsep) * \real{0.23}}\centering
 3\strut
 \end{minipage} &
-\begin{minipage}[t]{(\columnwidth - 2\tabcolsep) * \real{0.17}}\raggedright
-15/03\strut
+\begin{minipage}[t]{(\columnwidth - 2\tabcolsep) * \real{0.23}}\centering
+18/10\strut
 \end{minipage} &
-\begin{minipage}[t]{(\columnwidth - 2\tabcolsep) * \real{0.67}}\raggedright
+\begin{minipage}[t]{(\columnwidth - 2\tabcolsep) * \real{0.55}}\raggedright
 Basic principles of data visualization.\strut
 \end{minipage}\tabularnewline
-\begin{minipage}[t]{(\columnwidth - 2\tabcolsep) * \real{0.17}}\raggedright
+\begin{minipage}[t]{(\columnwidth - 2\tabcolsep) * \real{0.23}}\centering
 4\strut
 \end{minipage} &
-\begin{minipage}[t]{(\columnwidth - 2\tabcolsep) * \real{0.17}}\raggedright
-22/03\strut
+\begin{minipage}[t]{(\columnwidth - 2\tabcolsep) * \real{0.23}}\centering
+25/10\strut
 \end{minipage} &
-\begin{minipage}[t]{(\columnwidth - 2\tabcolsep) * \real{0.67}}\raggedright
+\begin{minipage}[t]{(\columnwidth - 2\tabcolsep) * \real{0.55}}\raggedright
 Data visualization tools.\strut
 \end{minipage}\tabularnewline
-\begin{minipage}[t]{(\columnwidth - 2\tabcolsep) * \real{0.17}}\raggedright
+\begin{minipage}[t]{(\columnwidth - 2\tabcolsep) * \real{0.23}}\centering
 5\strut
 \end{minipage} &
-\begin{minipage}[t]{(\columnwidth - 2\tabcolsep) * \real{0.17}}\raggedright
-29/03\strut
+\begin{minipage}[t]{(\columnwidth - 2\tabcolsep) * \real{0.23}}\centering
+01/11\strut
 \end{minipage} &
-\begin{minipage}[t]{(\columnwidth - 2\tabcolsep) * \real{0.67}}\raggedright
+\begin{minipage}[t]{(\columnwidth - 2\tabcolsep) * \real{0.55}}\raggedright
 Handling with strings and dates in data. \textbf{(HW1 assigned, Project
 proposal submission)}\strut
 \end{minipage}\tabularnewline
-\begin{minipage}[t]{(\columnwidth - 2\tabcolsep) * \real{0.17}}\raggedright
+\begin{minipage}[t]{(\columnwidth - 2\tabcolsep) * \real{0.23}}\centering
 6\strut
 \end{minipage} &
-\begin{minipage}[t]{(\columnwidth - 2\tabcolsep) * \real{0.17}}\raggedright
-05/04\strut
+\begin{minipage}[t]{(\columnwidth - 2\tabcolsep) * \real{0.23}}\centering
+08/11\strut
 \end{minipage} &
-\begin{minipage}[t]{(\columnwidth - 2\tabcolsep) * \real{0.67}}\raggedright
+\begin{minipage}[t]{(\columnwidth - 2\tabcolsep) * \real{0.55}}\raggedright
 Scraping data from web.\strut
 \end{minipage}\tabularnewline
-\begin{minipage}[t]{(\columnwidth - 2\tabcolsep) * \real{0.17}}\raggedright
+\begin{minipage}[t]{(\columnwidth - 2\tabcolsep) * \real{0.23}}\centering
 7\strut
 \end{minipage} &
-\begin{minipage}[t]{(\columnwidth - 2\tabcolsep) * \real{0.17}}\raggedright
-12/04\strut
+\begin{minipage}[t]{(\columnwidth - 2\tabcolsep) * \real{0.23}}\centering
+15/11\strut
 \end{minipage} &
-\begin{minipage}[t]{(\columnwidth - 2\tabcolsep) * \real{0.67}}\raggedright
+\begin{minipage}[t]{(\columnwidth - 2\tabcolsep) * \real{0.55}}\raggedright
 Data extraction from social networking sites.\strut
 \end{minipage}\tabularnewline
-\begin{minipage}[t]{(\columnwidth - 2\tabcolsep) * \real{0.17}}\raggedright
+\begin{minipage}[t]{(\columnwidth - 2\tabcolsep) * \real{0.23}}\centering
 8\strut
 \end{minipage} &
-\begin{minipage}[t]{(\columnwidth - 2\tabcolsep) * \real{0.17}}\raggedright
-19/04\strut
+\begin{minipage}[t]{(\columnwidth - 2\tabcolsep) * \real{0.23}}\centering
+22/11\strut
 \end{minipage} &
-\begin{minipage}[t]{(\columnwidth - 2\tabcolsep) * \real{0.67}}\raggedright
-Basic principles of text mining.\strut
+\begin{minipage}[t]{(\columnwidth - 2\tabcolsep) * \real{0.55}}\raggedright
+ITU Fall Break.\strut
 \end{minipage}\tabularnewline
-\begin{minipage}[t]{(\columnwidth - 2\tabcolsep) * \real{0.17}}\raggedright
+\begin{minipage}[t]{(\columnwidth - 2\tabcolsep) * \real{0.23}}\centering
 9\strut
 \end{minipage} &
-\begin{minipage}[t]{(\columnwidth - 2\tabcolsep) * \real{0.17}}\raggedright
-26/04\strut
+\begin{minipage}[t]{(\columnwidth - 2\tabcolsep) * \real{0.23}}\centering
+29/11\strut
 \end{minipage} &
-\begin{minipage}[t]{(\columnwidth - 2\tabcolsep) * \real{0.67}}\raggedright
-Network analysis and visualization.\strut
+\begin{minipage}[t]{(\columnwidth - 2\tabcolsep) * \real{0.55}}\raggedright
+Basic principles of text mining. \textbf{(Project interim report
+submission)}\strut
 \end{minipage}\tabularnewline
-\begin{minipage}[t]{(\columnwidth - 2\tabcolsep) * \real{0.17}}\raggedright
+\begin{minipage}[t]{(\columnwidth - 2\tabcolsep) * \real{0.23}}\centering
 10\strut
 \end{minipage} &
-\begin{minipage}[t]{(\columnwidth - 2\tabcolsep) * \real{0.17}}\raggedright
-03/05\strut
+\begin{minipage}[t]{(\columnwidth - 2\tabcolsep) * \real{0.23}}\centering
+06/12\strut
 \end{minipage} &
-\begin{minipage}[t]{(\columnwidth - 2\tabcolsep) * \real{0.67}}\raggedright
-Basic principles of geographic information system. \textbf{(Seminar,
-Project interim report submission)}\strut
+\begin{minipage}[t]{(\columnwidth - 2\tabcolsep) * \real{0.55}}\raggedright
+Network analysis and visualization.\strut
 \end{minipage}\tabularnewline
-\begin{minipage}[t]{(\columnwidth - 2\tabcolsep) * \real{0.17}}\raggedright
+\begin{minipage}[t]{(\columnwidth - 2\tabcolsep) * \real{0.23}}\centering
 11\strut
 \end{minipage} &
-\begin{minipage}[t]{(\columnwidth - 2\tabcolsep) * \real{0.17}}\raggedright
-10/05\strut
+\begin{minipage}[t]{(\columnwidth - 2\tabcolsep) * \real{0.23}}\centering
+13/12\strut
 \end{minipage} &
-\begin{minipage}[t]{(\columnwidth - 2\tabcolsep) * \real{0.67}}\raggedright
-Spring Break\strut
+\begin{minipage}[t]{(\columnwidth - 2\tabcolsep) * \real{0.55}}\raggedright
+Basic principles of geographic information system.\strut
 \end{minipage}\tabularnewline
-\begin{minipage}[t]{(\columnwidth - 2\tabcolsep) * \real{0.17}}\raggedright
+\begin{minipage}[t]{(\columnwidth - 2\tabcolsep) * \real{0.23}}\centering
 12\strut
 \end{minipage} &
-\begin{minipage}[t]{(\columnwidth - 2\tabcolsep) * \real{0.17}}\raggedright
-17/05\strut
+\begin{minipage}[t]{(\columnwidth - 2\tabcolsep) * \real{0.23}}\centering
+20/12\strut
 \end{minipage} &
-\begin{minipage}[t]{(\columnwidth - 2\tabcolsep) * \real{0.67}}\raggedright
+\begin{minipage}[t]{(\columnwidth - 2\tabcolsep) * \real{0.55}}\raggedright
 Visualization of spatial and urban data. \textbf{(HW2 assigned)}\strut
 \end{minipage}\tabularnewline
-\begin{minipage}[t]{(\columnwidth - 2\tabcolsep) * \real{0.17}}\raggedright
+\begin{minipage}[t]{(\columnwidth - 2\tabcolsep) * \real{0.23}}\centering
 13\strut
 \end{minipage} &
-\begin{minipage}[t]{(\columnwidth - 2\tabcolsep) * \real{0.17}}\raggedright
-24/05\strut
+\begin{minipage}[t]{(\columnwidth - 2\tabcolsep) * \real{0.23}}\centering
+27/12\strut
 \end{minipage} &
-\begin{minipage}[t]{(\columnwidth - 2\tabcolsep) * \real{0.67}}\raggedright
-Basic principles of interactive data visualization.
-\textbf{(Seminar)}\strut
+\begin{minipage}[t]{(\columnwidth - 2\tabcolsep) * \real{0.55}}\raggedright
+Basic principles of interactive data visualization.\strut
 \end{minipage}\tabularnewline
-\begin{minipage}[t]{(\columnwidth - 2\tabcolsep) * \real{0.17}}\raggedright
+\begin{minipage}[t]{(\columnwidth - 2\tabcolsep) * \real{0.23}}\centering
 14\strut
 \end{minipage} &
-\begin{minipage}[t]{(\columnwidth - 2\tabcolsep) * \real{0.17}}\raggedright
-31/05\strut
+\begin{minipage}[t]{(\columnwidth - 2\tabcolsep) * \real{0.23}}\centering
+03/01\strut
 \end{minipage} &
-\begin{minipage}[t]{(\columnwidth - 2\tabcolsep) * \real{0.67}}\raggedright
-Interactive web-based data visualization tools.\textbf{(Seminar)}\strut
+\begin{minipage}[t]{(\columnwidth - 2\tabcolsep) * \real{0.55}}\raggedright
+Interactive web-based data visualization tools.\strut
 \end{minipage}\tabularnewline
-\begin{minipage}[t]{(\columnwidth - 2\tabcolsep) * \real{0.17}}\raggedright
+\begin{minipage}[t]{(\columnwidth - 2\tabcolsep) * \real{0.23}}\centering
 15\strut
 \end{minipage} &
-\begin{minipage}[t]{(\columnwidth - 2\tabcolsep) * \real{0.17}}\raggedright
-07/06\strut
+\begin{minipage}[t]{(\columnwidth - 2\tabcolsep) * \real{0.23}}\centering
+10/01\strut
 \end{minipage} &
-\begin{minipage}[t]{(\columnwidth - 2\tabcolsep) * \real{0.67}}\raggedright
+\begin{minipage}[t]{(\columnwidth - 2\tabcolsep) * \real{0.55}}\raggedright
 Relational databases.\strut
 \end{minipage}\tabularnewline
-\begin{minipage}[t]{(\columnwidth - 2\tabcolsep) * \real{0.17}}\raggedright
+\begin{minipage}[t]{(\columnwidth - 2\tabcolsep) * \real{0.23}}\centering
 16-17\strut
 \end{minipage} &
-\begin{minipage}[t]{(\columnwidth - 2\tabcolsep) * \real{0.17}}\raggedright
-14-27/06\strut
+\begin{minipage}[t]{(\columnwidth - 2\tabcolsep) * \real{0.23}}\centering
+17-30/01\strut
 \end{minipage} &
-\begin{minipage}[t]{(\columnwidth - 2\tabcolsep) * \real{0.67}}\raggedright
+\begin{minipage}[t]{(\columnwidth - 2\tabcolsep) * \real{0.55}}\raggedright
 Final exam week. \textbf{(Final report submission, Project website on
 GitHub pages, Oral presentation)}\strut
 \end{minipage}\tabularnewline
@@ -374,6 +363,9 @@ immediately following the course, and/or a few months after the course.
 
 \textbf{Textbook:} All lecture materials.
 
+\textbf{Course Workload:} 2 homework assignments, a team-based project
+(see the details below).
+
 \textbf{Recommended Bibliography:} Students are encouraged to consult
 the following sources on their own:
 
@@ -409,48 +401,39 @@ the following sources on their own:
 
 Access to library e-sources remotely is possible with a library account.
 Users without a library account should apply for the library
-registration at
-\href{Library register}{https://kutuphane.itu.edu.tr/en/register}. After
+registration at \url{https://kutuphane.itu.edu.tr/en/register}. After
 setting the web configurations given at
-\href{Proxy}{https://kutuphane.itu.edu.tr/en/services \linebreak /web-browser-proxy-settings}
-only once on your computer, you will able to have an access to ITU
-Library e-sources.
+\url{https://kutuphane.itu.edu.tr/en/services}
+/web-browser-proxy-settings only once on your computer, you will able to
+have an access to ITU Library e-sources.
 
-\textbf{Course Workload:} 2 homework assignments, a team-based project
-(see the details below), and seminars given by guest lecturers.
-
-\textbf{Selected Important Dates:} For the official ITU Spring 2021
+\textbf{Selected Important Dates:} For the official ITU Fall 2021
 academic calendar, please visit:
 
-\url{https://www.sis.itu.edu.tr/TR/ogrenci/akademik-takvim/akademik-takvim.php}.
+\url{https://www.sis.itu.edu.tr/TR/ogrenci/akademik-takvim/akademik-takvimler/takvim2022/lisans-akademik-takvimi.php}
 
-Here are some selected important dates in Spring 2021 semester:
+Here are some selected important dates in Fall 2021 semester:
 
-March 1, 2021: First day of classes.
+October 4, 2021: First day of classes.
 
-March 1-5, 2021: Add-drop week.
+October 4-8, 2021: Add-drop week.
 
-April 23, 2021: National Sovereignty and Children's Day (Friday, No
-classes).
+October 29, 2021: Republic Day of Turkey (Friday, No classes).
 
-May 1, 2021: Labor and Solidarity Day (Saturday, No classes).
+November 22-26, 2021: ITU Fall Break (No classes).
 
-May 10-15, 2021: ITU Spring Break and Ramadan Feast Holiday
-(\textbf{Monday-Sunday} No classes).
+January 1, 2022: New year (Saturday).
 
-May 19, 2021: Commemoration of Atatürk, Youth and Sports Day (Wednesday,
-No classes).
+January 14, 2022: Last day of classes.
 
-June 11, 2021: Last day of classes.
-
-June 14- 27, 2021: Final exam week.
+January 17-30, 2022: Final exam week.
 
 I also honor other national and religous holidays. Students, who needs
 flexibility on individual-based studies overlapping with these special
 days, can inform me.
 
 \hypertarget{course-policies}{%
-\section{Course Policies}\label{course-policies}}
+\subsection{Course Policies}\label{course-policies}}
 
 Please read the information below as a reference for how this class will
 be conducted.
@@ -459,27 +442,14 @@ be conducted.
 
 \begin{itemize}
 \item
-  Assessment Method \quad      \quad \quad                Total
-  Contribution to Final Grade:
+  Assessment Method Total Contribution to Final Grade:
 
   \begin{itemize}
   \tightlist
   \item
-    2 homework assignments each 10\% \quad \quad \quad            20\%,
-
-    \begin{itemize}
-    \item
-      Homework assignments will be motivated by data sets/examples of
-      Tidy Tuesday available at:
-
-      \url{https://github.com/rfordatascience/tidytuesday}.
-    \item
-      You can also share your assignments on Twitter with tags
-      \#TidyTuesday, \#rstats, and \#mat381e.
-    \end{itemize}
+    2 homework assignments each 10\%,
   \item
-    1 team-based project
-    \quad \quad \quad                           80\%.
+    1 team-based project 80\%.
   \item
     Detailed break-down of the team-based project:
 
@@ -510,9 +480,6 @@ be conducted.
   and oral presentation}. However, I reserve the right to assign
   different grades to each team member based on peer evaluations (see
   below).
-\item
-  You can also share your project website link on GitHub pages on
-  Twitter with tags \#data4good, \#rstats, and \#mat381e.
 \item
   Each team member should contribute to oral presentation where the
   allocated time is evenly distributed among the team members. If any
@@ -552,7 +519,7 @@ medical report during the submission periods can ask for extension only.
 \textbf{Class Attendance Policy:}
 
 The students are encouraged to attend classes, whereas the attendance is
-not mandatory in Spring 2021 semester due to Covid-19 pandemic. For that
+not mandatory in Fall 2021 semester due to Covid-19 pandemic. For that
 reason, the student is deemed responsible to manage his/her absences.
 
 \textbf{Participation Policy:}
