--- a/MAT381E_Syllabus.Rmd
+++ b/MAT381E_Syllabus.Rmd
@@ -203,9 +203,7 @@ For that reason, the student is deemed responsible to manage his/her absences.
 
 The students are expected to ask and answer
 questions, participate in in-class activities, and
-show their interest and engagement in the class. Asking questions in seminars
-is encouraged.
-
+show their interest and engagement in the class. 
 **E-mail Policy:**
 
 Please:
