--- a/MAT381E_Syllabus.tex
+++ b/MAT381E_Syllabus.tex
@@ -526,9 +526,7 @@ reason, the student is deemed responsible to manage his/her absences.
 
 The students are expected to ask and answer questions, participate in
 in-class activities, and show their interest and engagement in the
-class. Asking questions in seminars is encouraged.
-
-\textbf{E-mail Policy:}
+class. \textbf{E-mail Policy:}
 
 Please:
 
