--- a/MAT381E_Syllabus.tex
+++ b/MAT381E_Syllabus.tex
@@ -128,7 +128,7 @@ focus of this course.
 invitation soon to submit your study to the GitHub Classroom of the
 following organization:
 
-\url{https://github.com/MAT381E}.
+\url{https://github.com/MAT381E-Fall21}.
 
 \textbf{Class Schedule:} Mondays between 14:30-17:30 p.m. (Local time in
 Istanbul).
@@ -500,7 +500,8 @@ be conducted.
   see the relevant document on Ninova.}
 \item
   \textbf{Every study mentioned above should be submitted by each
-  student via Ninova and GitHub Classroom of MAT381E organization.}
+  student via Ninova and GitHub Classroom of MAT381E-Fall21
+  organization.}
 \item
   Exact submission dates for each study above will be announced at well
   in advance.
@@ -512,21 +513,23 @@ works will be accepted after deadline. There are \textbf{NO} make-ups
 for missed homework and team-based works. The students who have Covid-19
 medical report during the submission periods can ask for extension only.
 
-\textbf{Final Exam Attendance Policy:} Not applicable this semester.
+\textbf{Final Exam Attendance Policy:} At least 30 points from
+in-semester studies.
 
 \textbf{Make-Up Exam Policy:} Not applicable this semester.
 
 \textbf{Class Attendance Policy:}
 
-The students are encouraged to attend classes, whereas the attendance is
-not mandatory in Fall 2021 semester due to Covid-19 pandemic. For that
-reason, the student is deemed responsible to manage his/her absences.
+The students must attend at least 70\% of classes and is deemed
+responsible to manage his/her absences.
 
 \textbf{Participation Policy:}
 
 The students are expected to ask and answer questions, participate in
 in-class activities, and show their interest and engagement in the
-class. \textbf{E-mail Policy:}
+class.
+
+\textbf{E-mail Policy:}
 
 Please:
 
