--- a/MAT381E_Syllabus.Rmd
+++ b/MAT381E_Syllabus.Rmd
@@ -239,7 +239,7 @@ http://engelsiz.itu.edu.tr/.
 
 **ITU Distance Education Policy:** 
 
-Sharing the lecture recordings or its piece with third parties is \underline{strictly} forbidden. Furthermore, the recordings are subject to investigation by the authorities as needed. For that reason, be sure that you behave (\underline{both orally and verbally}) responsibly in this virtual class. Please visit:
+Sharing the lecture recordings or its piece with third parties is strictly forbidden. Furthermore, the recordings are subject to investigation by the authorities as needed. For that reason, be sure that you behave (both orally and verbally) responsibly in this virtual class. Please visit:
 
 https://online.itu.edu.tr/,
 
