--- a/MAT381E_Syllabus.tex
+++ b/MAT381E_Syllabus.tex
@@ -582,10 +582,10 @@ students with special needs at:
 \textbf{ITU Distance Education Policy:}
 
 Sharing the lecture recordings or its piece with third parties is
-\underline{strictly} forbidden. Furthermore, the recordings are subject
-to investigation by the authorities as needed. For that reason, be sure
-that you behave (\underline{both orally and verbally}) responsibly in
-this virtual class. Please visit:
+strictly forbidden. Furthermore, the recordings are subject to
+investigation by the authorities as needed. For that reason, be sure
+that you behave (both orally and verbally) responsibly in this virtual
+class. Please visit:
 
 \url{https://online.itu.edu.tr/},
 
