--- a/MAT381E_Syllabus.tex
+++ b/MAT381E_Syllabus.tex
@@ -472,6 +472,9 @@ be conducted.
     \end{itemize}
   \end{itemize}
 \item
+  Exact submission dates for each study above will be announced at well
+  in advance.
+\item
   Homework assignments are individual-based studies, whereas team-based
   project is the product of team.
 \item
@@ -493,18 +496,11 @@ be conducted.
   form, all members of that team will receive ``0'' for peer evaluation
   grade.
 \item
-  Peer evaluation and statement of personal contribution forms will be
-  available on Ninova.
-\item
-  \textbf{For detailed information on project design guideline, please
-  see the relevant document on Ninova.}
+  \textbf{For detailed information on project design guideline and
+  related documents, please see the relevant document on Ninova.}
 \item
   \textbf{Every study mentioned above should be submitted by each
-  student via Ninova and GitHub Classroom of MAT381E-Fall21
-  organization.}
-\item
-  Exact submission dates for each study above will be announced at well
-  in advance.
+  student via GitHub Classroom of MAT381E-Fall21 organization.}
 \end{itemize}
 
 \textbf{Late Submission Policy:} Students are expected to do homework
