--- a/MAT381E_Syllabus.Rmd
+++ b/MAT381E_Syllabus.Rmd
@@ -186,7 +186,7 @@ the team fails to do oral presentation, that individual will receive “0” for
 
 **Late Submission Policy:** Students are expected to do homework assignments by themselves. Neither homework assignments nor team-based works will be accepted after deadline. There are **NO** make-ups for missed homework and team-based works. The students who have Covid-19 medical report during the submission periods can ask for extension only.
 
-**Final Exam Attendance Policy:** At least 30 points from in-semester studies.
+**Final Exam Attendance Policy:** None.
 
 **Make-Up Exam Policy:** Not applicable this semester.
 
