--- a/MAT381E_Syllabus.tex
+++ b/MAT381E_Syllabus.tex
@@ -509,14 +509,13 @@ works will be accepted after deadline. There are \textbf{NO} make-ups
 for missed homework and team-based works. The students who have Covid-19
 medical report during the submission periods can ask for extension only.
 
-\textbf{Final Exam Attendance Policy:} At least 30 points from
-in-semester studies.
+\textbf{Final Exam Attendance Policy:} None.
 
 \textbf{Make-Up Exam Policy:} Not applicable this semester.
 
 \textbf{Class Attendance Policy:}
 
-The students must attend at least 70\% of classes and is deemed
+The students must attend at least 70\% of classes and are deemed
 responsible to manage his/her absences.
 
 \textbf{Participation Policy:}
